Fixing warnings, like making Vector<Object>